[tool.poetry]
name = "evo-agent"
version = "0.1.0"
description = "LLM retrieval augmented generation agent for EvoKG."
authors = ["Ankit Singh <ankit21450@iiitd.ac.in>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python=">=3.11,<4.0"
streamlit = "^1.26.0"
numpy = "1.26.4"
python-dotenv = "^1.0.0"
kani-utils = {git = "https://github.com/zakmii/evo-utils.git"}
httpx = "^0.24.0"
neo4j = "^5.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
